Separate js file for signing up. Login, signup, and logout now all work.

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,7 +18,7 @@
             </h2>
 
         </div>
-        <form class="mt-8 space-y-6 login-form" action="#" method="POST">
+        <form class="mt-8 space-y-6 signup-form" action="#" method="POST">
             <div class="rounded-md shadow-sm -space-y-px">
                 <div>
                     <label for="username" class="sr-only">Username</label>
@@ -63,4 +63,4 @@
     </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="./js/signup.js"></script>
