--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,134 +1,137 @@
 <!-- Your Dashboard banner -->
-    <div class="md:flex md:items-center md:justify-between bg-gray-800">
-        <div class="flex-1 min-w-0">
-            <!-- Text size doesn't change?? -->
-            <h1 class="text-2xl font-bold leading-7 text-white sm:text-3xl sm:truncate m-3">
-                Your Dashboard
-            </h1>
+<div class="md:flex md:items-center md:justify-between bg-gray-800">
+    <div class="flex-1 min-w-0">
+        <!-- Text size doesn't change?? -->
+        <h1 class="text-2xl font-bold leading-7 text-white sm:text-3xl sm:truncate m-3">
+            Your Dashboard
+        </h1>
+    </div>
+</div>
+
+<!-- User's posts -->
+{{#each posts as |post| }}
+<div class="mt-4 mx-4 post">
+    <ul role="list" class="space-y-4">
+        <li class="bg-white px-4 py-6 shadow sm:p-6 sm:rounded-lg">
+            <article aria-labelledby="question-title-81614">
+                <div class="flex justify-between">
+                    <h2 id="question-title-81614" class="text-base font-medium text-gray-900">
+                        {{post.title}}
+                    </h2>
+                    {{!-- <time class="text-sm text-gray-500">{{post.user.username}} {{format_date
+                        post.date_created}}</time> --}}
+                    <div class="text-sm text-gray-500">{{format_date post.date_created}}</div>
+                </div>
+            </article>
+        </li>
+    </ul>
+</div>
+{{/each}}
+
+<!-- Create post button -->
+<div class="mt-4 mx-4 flex justify-center">
+    <button type="button" id="create-post-button"
+        class="inline-flex items-center pl-3 pr-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        <!-- Heroicon document-add solid -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd"
+                d="M6 2a2 2 0 00-2 2v12a2 2 0 002 2h8a2 2 0 002-2V7.414A2 2 0 0015.414 6L12 2.586A2 2 0 0010.586 2H6zm5 6a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V8z"
+                clip-rule="evenodd" />
+        </svg>
+        Create New Post
+    </button>
+</div>
+
+<!-- Create post form -->
+<form class="space-y-2 mt-4" style="display:none">
+    <div class="mx-4">
+        <h3 class="p-2 text-lg leading-6 font-medium bg-gray-800 text-white rounded-md">
+            Create New Post
+        </h3>
+    </div>
+
+    <div class="sm:col-span-6 mx-4">
+        <label for="street-address" class="block text-sm font-medium text-gray-700">
+            Post Title
+        </label>
+        <div class="mt-1">
+            <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+                class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md">
         </div>
     </div>
 
-    <!-- User's posts -->
-    {{#each posts as |post| }}
-        <div class="mt-4 mx-4">
-            <ul role="list" class="space-y-4">
-                <li class="bg-white px-4 py-6 shadow sm:p-6 sm:rounded-lg">
-                    <article aria-labelledby="question-title-81614">
-                        <div class="flex justify-between">
-                            <h2 id="question-title-81614" class="text-base font-medium text-gray-900">
-                                {{post.title}}
-                            </h2>
-                            {{!-- <time class="text-sm text-gray-500">{{post.user.username}} {{format_date post.date_created}}</time> --}}
-                            <div class="text-sm text-gray-500">{{format_date post.date_created}}</div>
-                        </div>
-                    </article>
-                </li>
-            </ul>
-        </div>
-    {{/each}}
-
-    <!-- Create post button -->
-    {{!-- <div class="mt-4 mx-4 flex justify-center">
-        <button type="button"
-            class="inline-flex items-center pl-3 pr-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            <!-- Heroicon document-add solid -->
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd"
-                    d="M6 2a2 2 0 00-2 2v12a2 2 0 002 2h8a2 2 0 002-2V7.414A2 2 0 0015.414 6L12 2.586A2 2 0 0010.586 2H6zm5 6a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V8z"
-                    clip-rule="evenodd" />
-            </svg>
-            Create New Post
-        </button>
-    </div> --}}
-
-    <!-- Create post form -->
-    {{!-- <form class="space-y-2 mt-4">
-        <div class="mx-4">
-            <h3 class="p-2 text-lg leading-6 font-medium bg-gray-800 text-white rounded-md">
-                Create New Post
-            </h3>
-        </div>
-
-        <div class="sm:col-span-6 mx-4">
-            <label for="street-address" class="block text-sm font-medium text-gray-700">
-                Post Title
-            </label>
-            <div class="mt-1">
-                <input type="text" name="street-address" id="street-address" autocomplete="street-address"
-                    class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md">
-            </div>
-        </div>
-
-        <div class="mx-4">
-            <div>
-                <div class="mt-2 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-                    <div class="sm:col-span-6">
-                        <label for="about" class="block text-sm font-medium text-gray-700">
-                            Post Content
-                        </label>
-                        <div class="mt-1">
-                            <textarea id="about" name="about" rows="3"
-                                class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
-                        </div>
+    <div class="mx-4">
+        <div>
+            <div class="mt-2 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+                <div class="sm:col-span-6">
+                    <label for="about" class="block text-sm font-medium text-gray-700">
+                        Post Content
+                    </label>
+                    <div class="mt-1">
+                        <textarea id="about" name="about" rows="3"
+                            class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
+    <div>
+        <div class="flex justify-end mr-10">
+            <button type="submit"
+                class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                Create
+            </button>
+        </div>
+    </div>
+</form>
+
+<!-- Edit post -->
+<form class="space-y-2 mt-4" style="display:none">
+    <div class="mx-4">
+        <h3 class="p-2 text-lg leading-6 font-medium bg-gray-800 text-white rounded-md">
+            Edit Post
+        </h3>
+    </div>
+
+    <div class="sm:col-span-6 mx-4">
+        <label for="street-address" class="block text-sm font-medium text-gray-700">
+            Post Title
+        </label>
+        <div class="mt-1">
+            <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+                class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md">
+        </div>
+    </div>
+
+    <div class="mx-4">
         <div>
-            <div class="flex justify-end mr-10">
-                <button type="submit"
-                    class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                    Create
-                </button>
-            </div>
-        </div>
-    </form> --}}
-
-    <!-- Edit post -->
-    {{!-- <form class="space-y-2 mt-4">
-        <div class="mx-4">
-            <h3 class="p-2 text-lg leading-6 font-medium bg-gray-800 text-white rounded-md">
-                Edit Post
-            </h3>
-        </div>
-
-        <div class="sm:col-span-6 mx-4">
-            <label for="street-address" class="block text-sm font-medium text-gray-700">
-                Post Title
-            </label>
-            <div class="mt-1">
-                <input type="text" name="street-address" id="street-address" autocomplete="street-address"
-                    class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md">
-            </div>
-        </div>
-
-        <div class="mx-4">
-            <div>
-                <div class="mt-2 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-                    <div class="sm:col-span-6">
-                        <label for="about" class="block text-sm font-medium text-gray-700">
-                            Post Content
-                        </label>
-                        <div class="mt-1">
-                            <textarea id="about" name="about" rows="3"
-                                class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
-                        </div>
+            <div class="mt-2 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+                <div class="sm:col-span-6">
+                    <label for="about" class="block text-sm font-medium text-gray-700">
+                        Post Content
+                    </label>
+                    <div class="mt-1">
+                        <textarea id="about" name="about" rows="3"
+                            class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div>
-            <div class="flex justify-end mr-10">
-                <button type="button"
-                    class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                    Delete
-                </button>
-                <button type="submit"
-                    class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                    Update
-                </button>
-            </div>
+    <div>
+        <div class="flex justify-end mr-10">
+            <button type="button"
+                class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                Delete
+            </button>
+            <button type="submit"
+                class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                Update
+            </button>
         </div>
-    </form> --}}
+    </div>
+</form>
+
+<script src="./js/dashboard.js"></script>
