--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -29,7 +29,7 @@
 {{/each}}
 
 <!-- Create post button -->
-<div class="mt-4 mx-4 flex justify-center">
+<div class="mt-4 mx-4 flex justify-center" class="create-post-button">
     <button type="button" id="create-post-button"
         class="inline-flex items-center pl-3 pr-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
         <!-- Heroicon document-add solid -->
@@ -43,7 +43,7 @@
 </div>
 
 <!-- Create post form -->
-<form class="space-y-2 mt-4" style="display:none">
+<form class="space-y-2 mt-4 create-post-form" style="display:none">
     <div class="mx-4">
         <h3 class="p-2 text-lg leading-6 font-medium bg-gray-800 text-white rounded-md">
             Create New Post
@@ -87,7 +87,7 @@
 </form>
 
 <!-- Edit post -->
-<form class="space-y-2 mt-4" style="display:none">
+<form class="space-y-2 mt-4 edit-post-form" style="display:none">
     <div class="mx-4">
         <h3 class="p-2 text-lg leading-6 font-medium bg-gray-800 text-white rounded-md">
             Edit Post
