User can now create posts from the dashboard. Those posts show in the dashboard and the home page.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -51,11 +51,11 @@
     </div>
 
     <div class="sm:col-span-6 mx-4">
-        <label for="street-address" class="block text-sm font-medium text-gray-700">
+        <label for="title" class="block text-sm font-medium text-gray-700">
             Post Title
         </label>
         <div class="mt-1">
-            <input type="text" name="street-address" id="street-address" autocomplete="street-address"
+            <input type="text" name="title" id="title"
                 class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md">
         </div>
     </div>
@@ -64,11 +64,11 @@
         <div>
             <div class="mt-2 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
                 <div class="sm:col-span-6">
-                    <label for="about" class="block text-sm font-medium text-gray-700">
+                    <label for="content" class="block text-sm font-medium text-gray-700">
                         Post Content
                     </label>
                     <div class="mt-1">
-                        <textarea id="about" name="about" rows="3"
+                        <textarea id="content" name="content" rows="3"
                             class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
                     </div>
                 </div>
