Created additional public js files to break down functionality for code clarity. Subsequently dashboard.js was no longer needed. Moved Tech Blog banner from homepage, login, and signup handlebars to main handlebars. Subsequently homepage handlebars has been changed to home_posts.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Tech Blog</title>
 </head>
 
 <body>
@@ -59,6 +59,16 @@
             </div>
         </div>
     </nav>
+
+    <!-- The Tech Blog banner -->
+    <div class="md:flex md:items-center md:justify-between bg-gray-800">
+        <div class="flex-1 min-w-0">
+            <!-- Text size doesn't change?? -->
+            <h1 class="text-2xl font-bold leading-7 text-white sm:text-3xl sm:truncate m-3">
+                The Tech Blog
+            </h1>
+        </div>
+    </div>
 
     {{{ body }}}
     <!-- Omit footer until everything else is completed -->
