Clicking on a post from home will now redirect to that specific post's route, which will render only that post. Have not yet added comments and new comment form to that view.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,8 +15,11 @@ ul {
 }
 
 a {
-  font-weight: bold;
   text-decoration: none;
+}
+
+.navbar_link {
+  font-weight: bold;
 }
 
 .container-fluid {
