--- a/views/single_post.handlebars
+++ b/views/single_post.handlebars
@@ -1,5 +1,6 @@
 {{!-- For proof of concept HTML was taken from home_posts. Adjust once functional. --}}
 
+<!-- User's selected post. -->
 <div class="mt-4 mx-4">
   <ul role="list" class="space-y-4">
     <li class="bg-white px-4 py-6 shadow sm:p-6 sm:rounded-lg">
@@ -24,3 +25,62 @@
     </li>
   </ul>
 </div>
+
+<!-- Comments. -->
+{{#each post.comments as |comment| }}
+  <div class="mt-4 ml-10 mr-4">
+    <ul role="list" class="space-y-4">
+      <li class="bg-white px-4 py-6 shadow sm:p-6 sm:rounded-lg">
+        <article aria-labelledby="question-title-81614">
+          <div>
+            <div class="flex space-x-3">
+              <div class="min-w-0 flex-1">
+                <p class="text-sm font-medium text-gray-900">
+                  {{comment.user.username}}
+                </p>
+                <p class="text-sm text-gray-500">
+                  {{format_date comment.date_created}}
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 text-sm text-gray-700 space-y-4">
+            <p>{{comment.content}}</p>
+          </div>
+        </article>
+      </li>
+    </ul>
+  </div>
+{{/each}}
+
+<!-- Comment form -->
+<form class="space-y-2">
+  <div class="ml-10 mr-4">
+    <div>
+      <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+        <div class="sm:col-span-6">
+          <label for="about" class="block text-sm font-medium text-gray-700">
+            Comment
+          </label>
+          <div class="mt-1">
+            <textarea id="about" name="about" rows="3"
+              class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <div class="flex justify-end mr-10">
+      <button type="button"
+        class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        Cancel
+      </button>
+      <button type="submit"
+        class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        Update
+      </button>
+    </div>
+  </div>
+</form>
